--- a/producers/pom.xml
+++ b/producers/pom.xml
@@ -20,6 +20,7 @@
         </plugins>
     </build>
 
+    <!-- Kafka Clients Producer API - Avro Examples -->
     <repositories>
         <repository>
             <id>confluent</id>
@@ -27,17 +28,33 @@
         </repository>
     </repositories>
 
+    <properties>
+        <kafka.version>2.0.0</kafka.version>
+        <confluent.version>5.0.0</confluent.version>
+    </properties>
+
     <dependencies>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.11</artifactId>
-            <version>0.11.0.0</version>
-        </dependency>
+        <!-- Kafka Clients Producer API - Primitive Examples -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>0.11.0.0</version>
+            <version>${kafka.version}</version>
         </dependency>
+
+        <!-- Kafka Clients Producer API - JSON Examples -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>connect-json</artifactId>
+            <version>${kafka.version}</version>
+        </dependency>
+
+        <!-- Kafka Clients Producer API - Avro Examples -->
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+            <version>${confluent.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -52,21 +69,6 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.9.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>connect-api</artifactId>
-            <version>0.11.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>connect-json</artifactId>
-            <version>0.11.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.confluent</groupId>
-            <artifactId>kafka-avro-serializer</artifactId>
-            <version>3.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
