--- a/producers/pom.xml
+++ b/producers/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-avro-serializer</artifactId>
-            <version>${confluent.version}</version>
+            <version>5.3.0</version>
         </dependency>
 
         <dependency>
