--- a/producers/pom.xml
+++ b/producers/pom.xml
@@ -30,7 +30,7 @@
 
     <properties>
         <kafka.version>2.0.0</kafka.version>
-        <confluent.version>5.0.0</confluent.version>
+        <confluent.version>5.3.0</confluent.version>
     </properties>
 
     <dependencies>
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-avro-serializer</artifactId>
-            <version>5.3.0</version>
+            <version>${confluent.version}</version>
         </dependency>
 
         <dependency>
